# Heart-rate-monitor-STM32

./: .cproject  .gitignore  .mxproject  .project  Heart-Rate-Monitor Debug.launch  Heart-Rate-Monitor.ioc  Heart_Rate_Monitor_STM32 Debug.launch  Heart_Rate_Monitor_STM32.ioc  README.md
Core/: bitmaps.h  screen.c  screen.h
Core/Inc/: Interrupts.h  LIB_Config.h  MAX30102.h  Unit_tests.h  algorithm.h  bitmaps.h  main.h  screen.h  stm32f3xx_it.h
Core/Src/: Interrupts.c  MAX30102.c  SSD1331.c  algorithm.c  gpio.c  i2c.c  main.c  screen.c  spi.c  stm32f3xx_it.c
Drivers/STM32F3xx_HAL_Driver/Tests/mocks/: CMakeLists.txt  Mock_HAL_Drivers.cpp  Mock_HAL_Drivers.h
Drivers/STM32F3xx_HAL_Driver/Tests/stubs/: stm32f3xx_hal.h
UnitTests/: CMakeLists.txt
UnitTests/Tests/MAX30102/: CMakeLists.txt  MAX30102_UT.cpp
UnitTests/Tests/MAX30102/mocks/: CMakeLists.txt  Mock_MAX30102.cpp  Mock_MAX30102.h
UnitTests/Tests/MAX30102/stubs/: Stubs.h
